# ilayoutx

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  pyproject.toml  update_coverage.sh
.builds/: CI.yml  alpine.yml
.github/workflows/: CI.yml
docs/source/: api.md  conf.py  contributing.md  feature_table.md  index.md  installing.md
docs/source/api/: layout.md
python/ilayoutx/: __init__.py  ilayoutx.pyi  utils.py
python/ilayoutx/experimental/: __init__.py
python/ilayoutx/experimental/layouts/: __init__.py  geometric_layouts.py  lgl_layouts.py  umap_layouts.py
python/ilayoutx/ingest/: typing.py
python/ilayoutx/layouts/: __init__.py  arf.py  arf_layouts.py  basic.py  basic_layouts.py  bipartite.py  bipartite_layouts.py  dendrogram_layouts.py  forceatlas2.py  forceatlas2_layouts.py  gem.py  gem_layouts.py  geometric_layouts.py  grid.py  grid_layouts.py  kamada_kawai.py  kamada_kawai_layouts.py  lgl.py  lgl_layouts.py  mds_layouts.py  spring.py  spring_layouts.py  sugiyama.py  umap.py  umap_layouts.py
python/ilayoutx/packing/: __init__.py  circular.py  rectangular.py
src/: basic.rs  bipartite.rs  grid.rs  lib.rs  umap.rs
tests/layouts/: conftest.py  test_arf.py  test_gem.py  test_geometric.py  test_kamada_kawai.py  test_layout_basic.py  test_layout_bipartite.py  test_layout_dendrogram.py  test_layout_edgebundle.py  test_layout_forceatlas2.py  test_layout_spring.py  test_layout_sugiyama.py  test_lgl.py  test_mds.py  test_umap.py  test_umap_individual_pieces.py
tests/packing/: test_circular_packing.py  test_rectangular_packing.py
(+10 files in other folders)
